css/styles.css
/* ... */
#circle-container:hover{
  transform: rotate(0deg);
  transition-duration: 0.3s;
}
#button-red{
  position: absolute;
  right: 35px;
  top: 9px;
  z-index: 1;
  padding: 10px;
  background: none;
  border: 1px solid white;
  border-radius: 7px;
  color: white;
  font-weight: bold;
  font-size: 20px;
}

#container-title{
  width:365px;
  position: absolute;
  z-index: 1;
  left: 0;
  right: 0;
  margin: auto;
  text-align: center;
  top: 40px;
}
#articles-title{
  display: inline;
  line-height: 1.4em;
  background: white;
  font-size: 30px;
  padding: 10px;
  font-weight: bold;
}
.button-red-block{
  margin-top: 20px;
  max-width: 20em;
  padding: 20px;
  border-radius: 7px;
  background: white;
  border: none;
  font-family: 'Baloo Bhaina', cursive;
  color: #4287f5;
  font-size: 25px;
}
.button-red-block:hover{
  color: #d33a2c;
}
.span-red-block{
  font-size: 18px;
  color: white;
  font-weight: bold;
  text-shadow: 1px 0 1px black;
}
.h2-red-block{
  font-size: 45px;
  color: white;
  font-family: 'Baloo Bhaina', cursive;
  text-decoration: underline;
  text-decoration-color: #9d9d9e;
  margin-bottom: 40px;
  margin-top: 20px;
}
.h2-red-block:hover{
  color: white;
  text-decoration-color: #9d9d9e;
}
.img-ate-footer{
  display: none;
}
.a-footer-bottom{
  color: white;
  text-decoration: underline;
}
.a-footer-bottom:hover{
  color: white;
}
.a-footer{
  color: white;
}
.a-footer:hover{
  color: black;
  text-decoration: none;
}
.img-bird-footer{
  position: absolute;
  left: 10%;
  bottom: 30px;
  z-index: 10;
}
.li-middle{
  font-size: 20px;
  color: white;
  list-style-type: square;
  margin-left: 5%;
  max-width: 30em;
  margin-bottom: 10px;
}
.ul-footer{
  margin: 0 auto;
  font-size: 20px;
  width: 95%;
  line-height: 2em;
  margin-bottom: 35px;
}
.second-ul-footer{
  max-width: 513px;
  margin: 0 auto;
  line-height: 2em;
}
.second-li-footer{
  display:inline;
  margin-left: 10px;
  font-size: 17px;
  text-decoration: underline;
}
.p-footer{
  font-size: 16px;
  font-style: italic;
  margin: 0 auto;
  max-width: 430px;
  line-height: 1.8em;
  margin-bottom: 50px;
}
.li-footer{
  display:inline;
  margin-left: 5px;
}
.special-point{
  background: #242323;
  display:inline-block;
  width:10px;
  height:10px;
  margin-bottom:2px;
  border-radius:10px;
  opacity: 0.6;
}
.li-footer:hover{
  color: black;
}
.h4-footer{
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 35px;
}
.circle-square-container{
  position: absolute;
  width: 300px;
  top: 40px;
  margin: 0;
  padding: 0;
  height: 55px;
  right: 0;
  z-index: 6;
}
.circle-square-container:hover > #circle-container > #img-circle{
    transform: rotate(0deg);
    transition-duration: 0.3s;
}
.circle-square-container:hover > #button-red{
  background: white;
  color: #ad3028;
}

.trick{
  color: white;
  opacity: 0;
}
.header-head{
  width: 100%;
  background: #d13126;
  display: flex;
  align-items: center;
}

.logo{
  text-align: center;
  flex-basis: 16%;
  margin-left: 2%;
  margin-top: 1%;
}

.logo-small{
  display: none;
  width: 60px;
  margin-top: 4%;
}

.nav-menu{
  display: flex;
  flex: 1;
  justify-content: space-between;
  padding: 2%;
}

.header-element{
  text-align: center;
}

.a-menu{
  display: block;
  padding: 2px;
  color: white;
  text-shadow: 1px 1px 1px #454545;
}

.a-menu:hover{
  text-decoration: none;
  color: black;
  transition: color 0.2s ease-in-out;
  text-shadow: none;
}

.a-menu:hover .nav-img{
  transform: none;
  transition: transform .2s ease-out;
}

.a-menu:active, .a-menu:focus{
  border: dotted 4px rgba(0, 0, 0, .4);
  text-decoration: none;
  text-shadow: none;
  color: black;
  margin: -4px;
}

.nav-img{
  width: 32px;
  margin-bottom: 16px;
  transform: rotate(-11deg);
  transition: transform .2s ease-out;
  transform-origin: 0 100%;
  text-shadow: 3px 0 #fff, 2px 0 #fff, 1px 0 #fff, -1px 0 #fff, -2px 0 #fff, -3px 0 #fff;
}

.font-menu-title{
  font-family: 'Baloo Bhaina', cursive;
  font-size: 2vw;
  font-weight: 100;
}

.font-menu-sub-title{
  font-family: 'Martel', serif;
  font-style: italic;
  font-size: 14px;
  margin-top: 14px;
  text-shadow: none;
}

.div-nav-btn{
  flex-basis: 15%;
  text-align: center;
  margin-left: auto;
  padding-right: 2%;
}

.nav-button{
  background: none;
  color: white;
  font-family: 'Baloo Bhaina', cursive;
  height: 50px;
  width: 130px;
  border: solid 3px white;
  border-radius: 7px;
  font-size: 20px;
}

.nav-button span{
  text-shadow: 1px 1px 1px #454545;
}

.btn-menu{
  display: none;
}

.box{
  position: relative;
  cursor: pointer;
}

.sub-box{
  margin: 100px 0;
}

.my-a{
  width: 81%;
  display: table;
  color: white;
  font-weight: 400;
  margin: 0 auto;
  font-family: 'Baloo Bhaina', cursive;
  text-shadow: 1px 1px 0 black;
  margin-bottom: 50px;

}

.my-a:hover{
  text-decoration: none;
  color: white;

}
.my-a-extra{
  color: white;
  position: relative;
}
.my-a-extra-margin{
  margin-left: 50px;
}
.my-a-extra:hover{
  text-decoration: none;
  color: white;
}

.box-a-middle{
  font-size: 50px;
  color: white;
  line-height: 1.3em;
}
.comment{
  font-size: 20px;
  display: inline-block;
  margin-top: 20px;
}
.box-a-middle:hover{
  color: white;
  text-decoration: none;
}
.box-a-top{
  font-size: 20px;
  width: 100%;
  display: table-cell;
  vertical-align: middle;
  padding-left: 20px;
  text-decoration: none;
  color: white;
}
.box-a-top:hover{
  color: white;
  text-decoration: none;
}
.box-a-bottom{
  font-size: 20px;
  display: block;

}
.back1{
  background: #eb4034;
}

.back2{
  background: #ad3028;
}

.back3{
  background: #db3b30;
}

.back4{
  background: #bd332a;
}
.img-user{
  border: 5px solid white;
  border-radius: 5px;
  width: 80px;
  transform: rotate(-15deg);
  transition-duration: 0.5s;
  transform-origin: bottom left;
  box-shadow: 0px 15px 25px black;
  object-fit: cover;
}
.img-user:hover{
  transform: rotate(0);
  transition-duration: 0.4s;
}
.wrote{
  font-weight: 100;
  font-family: 'Lato', sans-serif;
}
/* ... */

